[tool.poetry]
name = "weazzle"
version = "0.1.0"
description = ""
authors = ["SeongHyeon Ji <j.eq.h0507@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.89.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
