[tool.poetry]
name = "weazzle"
version = "0.1.0"
description = ""
authors = ["SeongHyeon Ji <j.eq.h0507@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^22.12.0"
fastapi = "^0.89.1"
flake8 = "^6.0.0"
uvicorn = "^0.20.0"
motor = "^3.1.1"
pymongo = "^4.3.3"
pydantic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
